--- a/app/views/blog.html
+++ b/app/views/blog.html
@@ -18,6 +18,30 @@
         <main class="grid__main">
             <article class="article-card article-card--hero effect--scale hashtag--web-development">
                 <figure class="article-card__fig">
+                    <img class="article-card__img filter--gray" src="../img/contents/projects/educa-hero.jpg"
+                        alt="educa website" loading="lazy">
+                </figure>
+
+                <div class="article-card__content flex--centered-col">
+                    <h2 class="article-card__title title">eDuca - Course Landing page</h2>
+
+                    <ul class="article-card__tag-list list--no-bullet">
+                        <li class="tag-list__link h6">Web_Development</li>
+                    </ul>
+
+                    <p class="article-card__body "><strong>eDuca is not just any landing page!</strong> <br> This
+                        onepage has not only top web
+                        performance features (fast rendering, top performance & SEO rated by lighthouse) but also a 100%
+                        validated markup, a functioning contact form & dozens of other cool features!
+                    </p>
+
+                    <a class="article-card__btn" href="./02landing-page-educa.html" target="_blank"></a>
+
+                </div>
+            </article>
+
+            <article class="article-card article-card--hero effect--scale hashtag--web-development">
+                <figure class="article-card__fig">
                     <img class="article-card__img filter--gray" src="../img/contents/projects/vochabular.jpg"
                         alt="vochabular-project-image" loading="lazy">
                 </figure>
@@ -37,7 +61,6 @@
 
                 </div>
             </article>
-
         </main>
     </div>
     <footer></footer>
