--- a/app/views/index.html
+++ b/app/views/index.html
@@ -69,7 +69,7 @@
                             </figure>
 
                             <h3 class="article-card__title title">
-                                <a href="#">eDuca - Course Landing page </a>
+                                <a href="02landing-page-educa.html">eDuca - Course Landing page </a>
                             </h3>
 
                             <p class="article-card__body "> eDuca is onepage Landing Page Template for educational
@@ -77,8 +77,6 @@
                                 <a href="https://getbootstrap.com/">Bootstrap 5 framework</a>
                                 with top performance features, like top lighthouse rank & 100% markup validations.
                             </p>
-
-                            <a class="article-card__btn h7" href="#" target="_blank"></a>
                         </div>
                     </article>
                 </div>
