--- a/app/views/portfolio.html
+++ b/app/views/portfolio.html
@@ -35,7 +35,7 @@
                         with top performance features, like top lighthouse rank & 100% markup validations.
                     </p>
 
-                    <a class="article-card__btn h7" href="#" target="_blank"></a>
+                    <a class="article-card__btn h7" href="./02landing-page-educa.html" target="_blank"></a>
                 </div>
             </article>
 
