--- a/app/sass/_home.scss
+++ b/app/sass/_home.scss
@@ -112,6 +112,7 @@
     @include grid__item(1, 5, 11, 13);
     color: $lavendergray;
     text-align: center;
+    margin-top: -2rem;
 
     ul {
         list-style: none;
@@ -242,7 +243,6 @@ a.home__grid--toplikes,
 
 .home__grid--skills {
     // display: none;
-
     ul {
         justify-content: center;
         margin-top: 0.5rem;
@@ -418,6 +418,7 @@ a.home__grid--toplikes,
         13);
         border: 1px solid $light-onyx;
         margin-bottom: 27px;
+        margin-top:0;
     }
     .header__greet {
         display: block;
