Replace template with web theme

--- a/app/views/02landing-page-educa.html
+++ b/app/views/02landing-page-educa.html
@@ -77,6 +77,9 @@
                         <li> Easy-to-customize fonts, colors, photos to match your branding.
                         </li>
 
+                        <li> one-line compiler: npm run compile:sass
+                        </li>
+
                     </ul>
 
                     <h3>Tweeked for Performance</h3>
@@ -85,7 +88,7 @@
                         <img class="article-card__img" src="../img/contents/projects/educa02.jpg"
                             alt="vochabular-project-image" loading="lazy">
                         <figcaption class="h7 text--onyx">
-                            Lighthouse report of eDuca template.
+                            Lighthouse report of eDuca web theme.
                         </figcaption>
                     </figure>
 
@@ -101,7 +104,7 @@
 
                     <h3>What's included</h3>
 
-                    <p class="article-card__body body--default">the template includes the following files:
+                    <p class="article-card__body body--default">eDuca web theme includes the following files:
                     </p>
 
                     <ol>
@@ -122,7 +125,7 @@
                         </li>
 
                         <li>
-                            Thank you Page Template
+                            Thank you Page Template.
                         </li>
 
                         <li>
@@ -131,11 +134,16 @@
 
                         <li>
                             Sitemap.xml for SEO purpeses. ells search engine crawlers which URLs the crawler can access
-                            on your site
+                            on your site.
                         </li>
 
                         <li>
-                            Robots.txt which tells search engine crawlers which URLs the crawler can access on your site
+                            Robots.txt which tells search engine crawlers which URLs the crawler can access on your
+                            site.
+                        </li>
+
+                        <li>
+                            .htaccess for caching assets & boosting page load.
                         </li>
                     </ol>
 
