--- a/app/views/index.html
+++ b/app/views/index.html
@@ -72,10 +72,10 @@
                                 <a href="02landing-page-educa.html">eDuca - Course Landing page </a>
                             </h3>
 
-                            <p class="article-card__body "> eDuca is onepage Landing Page Template for educational
+                            <p class="article-card__body "> eDuca is onepage Landing Page Web Theme for educational
                                 needs, based on
                                 <a href="https://getbootstrap.com/">Bootstrap 5 framework</a>
-                                with top performance features, like top lighthouse rank & 100% markup validations.
+                                with top performance features & 100% markup validations.
                             </p>
                         </div>
                     </article>
