--- a/app/views/03landing-page-natureflix.html
+++ b/app/views/03landing-page-natureflix.html
@@ -11,15 +11,15 @@
 
             <article class="article-card article-card--hero">
                 <figure class="article-card__fig">
-                    <img class="article-card__img" src="../img/contents/projects/educa01.jpg" alt="educa landing page"
+                    <img class="article-card__img" src="../img/contents/projects/natureflix-detail.jpg" alt="educa landing page"
                         loading="lazy">
                 </figure>
 
-                <a class="article-card__btn btn--s" href="http://mannar.ch/projects/educa/" target="_blank">LIVE
+                <a class="article-card__btn btn--s" href="http://mannar.ch/projects/natureflix" target="_blank">LIVE
                     DEMO</a>
 
                 <div class="article-card__content flex--centered-col">
-                    <h2 class="article-card__title title">eDuca - Course Landing page</h2>
+                    <h2 class="article-card__title title">Natureflix - Travel Agency Landing page</h2>
 
                     <ul class="article-card__tag-list list--no-bullet">
                         <li>
@@ -27,30 +27,30 @@
                         </li>
                         <li>
                             <!-- <span class="disqus-comment-count" data-disqus-url="01blog-vochabular.html#disqus_thread"></span> -->
-                            <a class="h6 disqus" href="02landing-page-educa#disqus_thread"></a>
+                            <a class="h6 disqus" href="03landing-page-natureflix.html#disqus_thread"></a>
                         </li>
                     </ul>
 
-                    <p class="article-card__body body--hightlighted">eDuca landing page is a light-weight landing page
-                        for a course, a workshop or a seminar, boost your sales by presenting a demo video of your
-                        course/workshop uploaded on youtube or vimeo.
+                    <p class="article-card__body body--hightlighted">Natureflex landing page offers a simple design yet attractive elements to deliver
+                        a engaging user experience & push sales with its customized contact form.
                     </p>
 
-                    <p class="article-card__body body--default">With
-                        attractive gradient colors, eDuca was develop not only load fast but also to set up a
-                        high-converting
-                        sales by getting visitors to use
-                        the contact form.
+                    <p class="article-card__body body--default">Check out the video background at the hero section of the website, 
                     </p>
 
                     <p class="article-card__body body--default">
                         Hours were put on this landing page to make it easy-to-customize, faster to reload & error free.
                     </p>
 
+                    <figure class="article-card__fig">
+                        <img class="article-card__img" src="../img/contents/projects/natureflix-detail-full-0.jpg" alt="educa landing page"
+                            loading="lazy">
+                    </figure>
+
                     <h3>Features</h3>
 
                     <ul>
-                        <li>"Watch Demo" video in the hero section (youtube or vimeo)
+                        <li>Background video
                         </li>
 
                         <li>Bootstrap 5
@@ -59,19 +59,19 @@
                         <li>Fully Responsive
                         </li>
 
-                        <li>Portfolio with Filtering
+                        <li>Product Cards ( wobbling, flipping)
                         </li>
 
-                        <li>A functioning contact-us form with validations
+                        <li>A functioning contact-us form with browser validations
+                        </li>
+
+                        <li> A hank you page after form submit
                         </li>
 
                         <li>Google analytics integration
                         </li>
 
                         <li>Favicon, pinned icon & sitemap.
-                        </li>
-
-                        <li> 404 page & thank you page.
                         </li>
 
                         <li> Easy-to-customize fonts, colors, photos to match your branding.
@@ -82,21 +82,21 @@
 
                     </ul>
 
-                    <h3>Tweeked for Performance</h3>
+                    <h3>Impressive Mobile Menu</h3>
 
-                    <figure class="article-card__fig">
-                        <img class="article-card__img" src="../img/contents/projects/educa02.jpg"
-                            alt="vochabular-project-image" loading="lazy">
+                    <figure class="article-card__fig natureflix">
+                        <img class="article-card__img" src="../img/contents/projects/natureflix-detail-full-2.jpg"
+                            alt="natureflix-project-image" loading="lazy">
                         <figcaption class="h7 text--onyx">
-                            Lighthouse report of eDuca web theme.
+                            Scale, gradient & transition combination!
                         </figcaption>
                     </figure>
 
                     <h3>100% Validated Markup by W3C</h3>
 
                     <figure class="article-card__fig">
-                        <img class="article-card__img" src="../img/contents/projects/educa03.jpg"
-                            alt="vochabular-project-image" loading="lazy">
+                        <img class="article-card__img" src="../img/contents/projects/natureflix-w3-validator.jpg"
+                            alt="natureflix-project-image" loading="lazy">
                         <figcaption class="h7 text--onyx">
                             W3C Markup validation showing 0 erros
                         </figcaption>
@@ -104,7 +104,7 @@
 
                     <h3>What's included</h3>
 
-                    <p class="article-card__body body--default">eDuca web theme includes the following files:
+                    <p class="article-card__body body--default">Natureflix web template includes the following files:
                     </p>
 
                     <ol>
@@ -147,7 +147,7 @@
                         </li>
                     </ol>
 
-                    <a class="article-card__btn btn--s" href="#" target="_blank">Get eDuca</a>
+                    <a class="article-card__btn btn--s" href="#" target="_blank">Get Natureflix</a>
 
                 </div>
             </article>
