--- a/app/views/index.html
+++ b/app/views/index.html
@@ -65,17 +65,16 @@
                         <div class="article-card__content flex--centered-col">
                             <figure class="article-card__fig">
                                 <img class="article-card__img filter--gray"
-                                    src="../img/contents/projects/educa-hero.jpg" alt="educa website" loading="lazy">
+                                    src="../img/contents/projects/natureflix.jpg" alt="educa website" loading="lazy">
                             </figure>
 
                             <h3 class="article-card__title title">
-                                <a href="02landing-page-educa.html">eDuca - Course Landing page </a>
+                                <a href="03landing-page-natureflix.html">Natureflix - Travel Agency Landing page  </a>
                             </h3>
 
-                            <p class="article-card__body "> eDuca is onepage Landing Page Web Theme for educational
-                                needs, based on
-                                <a href="https://getbootstrap.com/">Bootstrap 5 framework</a>
-                                with top performance features & 100% markup validations.
+                            <p class="article-card__body "> Background video, cool fun animation of the product cards,
+                                fancy mobile menu animation. Natureflix brings the power of CSS together with 
+                                <a href="https://getbootstrap.com/">Bootstrap 5 framework</a> & a modular structure.
                             </p>
                         </div>
                     </article>
