--- a/app/views/portfolio.html
+++ b/app/views/portfolio.html
@@ -17,30 +17,57 @@
             <!-- article hero: to replace -->
             <article class="article-card article-card--hero effect--scale hashtag--web-themes">
                 <figure class="article-card__fig">
-                    <img class="article-card__img filter--gray" src="../img/contents/projects/educa-hero.jpg"
+                    <img class="article-card__img filter--gray" src="../img/contents/projects/natureflix.jpg"
                         alt="educa website" loading="lazy" width="470" height="255">
                 </figure>
 
                 <div class="article-card__content flex--centered-col">
-                    <h2 class="article-card__title title">eDuca - Course Landing page </h2>
+                    <h2 class="article-card__title title">Natureflix - Travel Agency Landing page </h2>
 
                     <ul class="article-card__tag-list list--no-bullet">
                         <li class="tag-list__link h6">CSS/HTML</li>
+                        <li class="tag-list__link h6">SASS</li>
                         <li class="tag-list__link h6">Bootstrap</li>
                     </ul>
 
-                    <p class="article-card__body "> eDuca is onepage Landing Page Template for educational
-                        needs, based on
-                        <a href="https://getbootstrap.com/">Bootstrap 5 framework</a>
-                        with top performance features, like top lighthouse rank & 100% markup validations.
+                    <p class="article-card__body "> What makes this HTML/CSS template special is the nefty fun animation of the product card,
+                        the mobile menu & the fancy hover links. Natureflix brings the power of CSS together with 
+                        <a href="https://getbootstrap.com/">Bootstrap 5 framework</a> & a modular structure.
                     </p>
 
-                    <a class="article-card__btn h7" href="./02landing-page-educa.html" target="_blank"></a>
+                    <a class="article-card__btn h7" href="./03landing-page-natureflix.html" target="_blank"></a>
                 </div>
             </article>
 
             <div class="article-grid flex--centered-row">
-                <!-- article 2 : antarctica-->
+                <!-- article 5 : Educa Course Landing page-->
+                <article class="article-card effect--scale hashtag--web-themes">
+                    <figure class="article-card__fig">
+                        <img class="article-card__img filter--gray" src="../img/contents/projects/educa-hero.jpg"
+                            alt="antarctica-project-image" loading="lazy" width="470" height="255">
+                    </figure>
+
+                    <div class="article-card__content flex--centered-col">
+                        <h2 class="article-card__title title">eDuca - Course Landing page</h2>
+
+                        <ul class="article-card__tag-list list--no-bullet">
+                            <li class="tag-list__link h6">CSS/HTML</li>
+                            <li class="tag-list__link h6">SASS</li>
+                            <li class="tag-list__link h6">Bootstrap</li>
+                            <li class="tag-list__link h6">Javascript</li>
+                        </ul>
+
+                        <p class="article-card__body "> eDuca is onepage Landing Page Template for educational
+                            needs, based on
+                            <a href="https://getbootstrap.com/">Bootstrap 5 framework</a>
+                            with top performance features, like top lighthouse rank & 100% markup validations.
+                        </p>
+
+                        <a class="article-card__btn h7" href="./02landing-page-educa.html" target="_blank"></a>
+                    </div>
+                </article>
+
+                <!-- article 4 : antarctica a ficive travel agency-->
                 <article class="article-card effect--scale hashtag--web-themes">
                     <figure class="article-card__fig">
                         <img class="article-card__img filter--gray" src="../img/contents/projects/antarctica.jpg"
@@ -63,7 +90,7 @@
                     </div>
                 </article>
 
-                <!-- article 3 -->
+                <!-- article 3: Vochabular Drupal Project-->
                 <article class="article-card effect--scale hashtag--drupal">
                     <figure class="article-card__fig">
                         <img class="article-card__img filter--gray" src="../img/contents/projects/vochabular.jpg"
@@ -71,7 +98,7 @@
                     </figure>
 
                     <div class="article-card__content flex--centered-col">
-                        <h3 class="article-card__title title">Vochabular Blog- my first Drupal project</h3>
+                        <h3 class="article-card__title title">Vochabular Blog- A Drupal project</h3>
 
                         <ul class="article-card__tag-list list--no-bullet">
                             <li class="tag-list__link h6">CSS/HTML</li>
@@ -91,7 +118,7 @@
                     </div>
                 </article>
 
-                <!-- article 4 -->
+                <!-- article 2: Forty HTML template -->
                 <article class="article-card effect--scale hashtag--web-themes">
                     <figure class="article-card__fig">
                         <img class="article-card__img filter--gray" src="../img/contents/projects/forty.jpg"
@@ -113,7 +140,7 @@
                     </div>
                 </article>
 
-                <!-- article 5 -->
+                <!-- article 1: Collection of Inforgraphic Design -->
                 <article class="article-card effect--scale hashtag--graphic-design hashtag--infographic">
                     <figure class="article-card__fig">
                         <img class="article-card__img filter--gray" src="../img/contents/projects/infographic.jpg"
