Update sale links

--- a/app/views/02landing-page-educa.html
+++ b/app/views/02landing-page-educa.html
@@ -27,7 +27,7 @@
                         </li>
                         <li>
                             <!-- <span class="disqus-comment-count" data-disqus-url="01blog-vochabular.html#disqus_thread"></span> -->
-                            <a class="h6 disqus" href="02landing-page-educa#disqus_thread"></a>
+                            <a class="h6 disqus" href="02landing-page-educa.html#disqus_thread"></a>
                         </li>
                     </ul>
 
@@ -147,7 +147,7 @@
                         </li>
                     </ol>
 
-                    <a class="article-card__btn btn--s" href="#" target="_blank">Get eDuca</a>
+                    <a class="article-card__btn btn--s" href="https://www.templatemonster.com/landing-page-template/educa-course-landing-page-225613.html" target="_blank">Get eDuca</a>
 
                 </div>
             </article>
