--- a/app/views/03landing-page-natureflix.html
+++ b/app/views/03landing-page-natureflix.html
@@ -147,7 +147,7 @@
                         </li>
                     </ol>
 
-                    <a class="article-card__btn btn--s" href="#" target="_blank">Get Natureflix</a>
+                    <!-- <a class="article-card__btn btn--s" href="#" target="_blank">Get Natureflix</a> -->
 
                 </div>
             </article>
